# workshop

./: .gitattributes  CMakeLists.txt  cube_4x4.vox  entry.cpp  main.cpp  make_ios_client.sh  make_ios_game.sh  make_ios_tests.sh  make_vs2019_x64.cmd  make_wasm.sh  make_wasm_client.sh  make_wasm_editor.sh  make_wasm_pe.sh  make_wasm_tests.sh  make_xcode_ios.sh  math.h  primitives.h  tests.cpp  walkers.cpp  walkers.h
cmake/: toolchain_ios.cmake  toolchain_wasm.cmake
core/: CMakeLists.txt  palette.h  raycast.cpp  raycast.h  scene.cpp  scene.h  simulation.cpp  simulation.h  world.cpp  world.h
datahub/: CMakeLists.txt  datahub.cpp  datahub.h
docs/: palette_text.txt
engine/platform/: CMakeLists.txt  interfaces.h  platform_windows.cpp  platform_windows.h
foundation/: CMakeLists.txt  camera.h  datahub.h  fsm.h  layouts.h  math.h  orbit_camera_controller.h  parsing.h  platform.h  platform_ios.cpp  platform_ios.h  platform_wasm.cpp  platform_wasm.h  platform_windows.cpp  platform_windows.h  primitives.h  rendering.h  rendering_dx11.cpp  rendering_dx11.h  rendering_metal.cpp  rendering_metal.h  rendering_wasm.cpp  rendering_wasm.h  sound.h  util.cpp  util.h
foundation/gears/: camera.h  orbit_camera_controller.h  parsing.h  primitives.h
foundation/old_to_remake/: gles3Win32.cpp  gles3Win32.h  gles3X11.cpp  gles3X11.h  uw_platform.h
foundation/platform/: CMakeLists.txt  interfaces.h  platform_ios.cpp  platform_windows.cpp  platform_windows.h
foundation/rendering/: CMakeLists.txt  interfaces.h  rendering_dx11.cpp  rendering_dx11.h
game/: CMakeLists.txt  context.h  game.h  state_manager.cpp  state_manager.h
game/contexts/: context.h  debug_context.cpp  debug_context.h  particle_editor_context.cpp  particle_editor_context.h  yard_editor_context.cpp  yard_editor_context.h
game/contexts/editor/: camera_access_interface.h  editor_camera_context.cpp  editor_camera_context.h  editor_collision_shape_context.cpp  editor_collision_shape_context.h  editor_ground_context.cpp  editor_ground_context.h  editor_main_context.cpp  editor_main_context.h  editor_moving_tool.cpp  editor_moving_tool.h  editor_particles_context.cpp  editor_particles_context.h  editor_prefab_context.cpp  editor_prefab_context.h  editor_raycast_shape_context.cpp  editor_raycast_shape_context.h  editor_static_mesh_context.cpp  editor_static_mesh_context.h  editor_voxel_mesh_context.cpp  editor_voxel_mesh_context.h  node_access_interface.h  utils.cpp  utils.h
game/editor/: editor_camera_context.cpp  editor_collision_shape_context.cpp  editor_ground_context.cpp  editor_ground_context.h  editor_main_context.h  editor_moving_tool.cpp  editor_particles_context.cpp  editor_raycast_shape_context.h  node_access_interface.h  utils.cpp  utils.h
game/experimental/: debug_context.cpp  debug_context.h  render_dev.cpp  render_dev.h
game_castle/: CMakeLists.txt
game_castle/castle_controller/: castle_controller.cpp  castle_controller.h  interfaces.h
game_castle/creature_controller/: creature_controller.cpp  creature_controller.h  interfaces.h
game_castle/projectiles/: interfaces.h  projectiles.cpp  projectiles.h
package/ios/: Info.plist
package/wasm/: cert.pem  editor.html  index.html  key.pem  localserver.py  pe.html  server.pem  serviceworker.js  wasm.js  worker.js
platform/ios/: Info.plist  main.cpp
platform/wasm/: index.html
providers/: CMakeLists.txt  fontatlas_provider.cpp  fontatlas_provider.h  ground_provider.cpp  ground_provider.h  grounds_list.h  mesh_provider.cpp  mesh_provider.h  meshes_list.h  place_provider.cpp  place_provider.h  places_list.h  resource_list.h  resource_provider.cpp  resource_provider.h  texture_provider.cpp  texture_provider.h  textures_list.h
resources/: 1.vox  8x8x8.vox  cube1.vox  debug.yard  dev.yard  knight.vox  mech_core.vox  mech_leg_l.vox  mech_leg_r.vox  meshes.list  palette_text.txt  resources.list  test.vox  textures.list  wall_room00.vox  walls.vox
resources/collision/: knight.txt  pilon.txt  test.txt  test_circle_xz.txt  test_polygon_xz.txt
resources/emitters/: basic.cfg  basic.tga  basic.txt
resources/enemies/: troglodyte.vox
resources/forest/: castle.vox  castle_land_0000_1000.vox  castle_land_0000_1010.vox  castle_land_0000_1100.vox  castle_land_0000_1110.vox  castle_land_0000_1111.vox  castle_land_1000_xx00.vox  castle_land_1000_xx01.vox  castle_land_1000_xx10.vox  castle_land_1000_xx11.vox  castle_land_1010_xxxx.vox  castle_land_1100_xxx0.vox  castle_land_1100_xxx1.vox  castle_land_1110_xxxx.vox  castle_land_1111_xxxx.vox  grass.vox  land.vox  land_grass_0000_1000.vox  land_grass_0000_1010.vox  land_grass_0000_1100.vox  land_grass_0000_1110.vox  land_grass_0000_1111.vox  land_grass_1000_xx00.vox  land_grass_1000_xx01.vox  land_grass_1000_xx10.vox  land_grass_1000_xx11.vox  land_grass_1010_xxxx.vox  land_grass_1100_xxx0.vox  land_grass_1100_xxx1.vox  land_grass_1110_xxxx.vox  land_grass_1111_xxxx.vox  space.info
resources/meshes/: 1x1x1.vox  3x3x3.vox  knight.txt  knight.vox  knight_blue.txt  knight_blue.vox  knight_red.vox  paltest.vox  ruins.vox  voxtest.vox
tools/: gen_emitters.py  gen_grounds.py  gen_meshes.py  gen_places.py  gen_static_meshes.py  palette.py  png2pallete.py  png2vox.py  prefabs.py  resource_list.py
ui/: CMakeLists.txt  extensions.h  stage.cpp  stage.h  stage_base.cpp  stage_base.h  stage_image.cpp  stage_image.h  stage_pivot.cpp  stage_pivot.h  stage_text.cpp  stage_text.h
voxel/: CMakeLists.txt  mesh_factory.cpp  mesh_factory.h  mesh_provider.cpp  mesh_provider.h  palette.h  raycast.cpp  raycast.h  scene.cpp  scene.h  simulation.cpp  simulation.h  texture_provider.cpp  texture_provider.h  world.cpp  world.h  yard.cpp  yard.h  yard_actor.cpp  yard_actor.h  yard_base.cpp  yard_base.h  yard_object.cpp  yard_object.h  yard_square.cpp  yard_square.h  yard_static.h  yard_stead.cpp  yard_stead.h  yard_thing.cpp  yard_thing.h
voxel/environment/: CMakeLists.txt  environment.cpp  environment.h  interfaces.h
voxel/mesh_factory/: interfaces.h  mesh_factory.cpp  mesh_factory.h
voxel/meshes/: CMakeLists.txt  interfaces.h
(+35 files in other folders)
